--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "isekai-hotel",
+  "name": "isekai-hotel-ts",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -15,7 +15,11 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/node": "18.8.4",
+    "@types/react": "18.0.21",
+    "@types/react-dom": "18.0.6",
     "eslint": "8.25.0",
-    "eslint-config-next": "12.3.1"
+    "eslint-config-next": "12.3.1",
+    "typescript": "4.8.4"
   }
 }
