--- a/package.json
+++ b/package.json
@@ -9,12 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.8",
+    "axios": "^1.1.2",
     "bootstrap": "^5.2.2",
+    "html-react-parser": "^3.0.4",
+    "jquery": "^3.6.1",
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-bootstrap": "^2.5.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.37.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.14",
     "@types/node": "18.8.4",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
