--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react-bootstrap": "^2.5.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.37.0",
+    "react-icons": "^4.4.0",
+    "sweetalert2": "^11.5.1",
     "yup": "^0.32.11"
   },
   "devDependencies": {
