--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-hook-form": "^7.37.0",
     "react-icons": "^4.4.0",
     "sweetalert2": "^11.5.1",
+    "usehooks-ts": "^2.7.2",
     "yup": "^0.32.11"
   },
   "devDependencies": {
