--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.3",
     "@hookform/resolvers": "^2.9.8",
     "axios": "^1.1.2",
     "bootstrap": "^5.2.2",
     "html-react-parser": "^3.0.4",
     "jquery": "^3.6.1",
     "next": "12.3.1",
+    "nookies": "^2.5.2",
     "react": "18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "18.2.0",
@@ -31,6 +33,6 @@
     "@types/react-dom": "18.0.6",
     "eslint": "8.25.0",
     "eslint-config-next": "12.3.1",
-    "typescript": "4.8.4"
+    "typescript": "^4.8.4"
   }
 }
